--- a/public/logs.html
+++ b/public/logs.html
@@ -141,7 +141,7 @@
     </div>
 
     <script>
-        const socket = io("http://localhost:4000");
+        const socket = io("https://node-logger-1nwe.onrender.com");
         const logTableBody = document.getElementById("logTableBody");
         const modal = document.getElementById("logModal");
         const modalOverlay = document.getElementById("modalOverlay");
